fix(people): disables overflow of list

--- a/www/assets/css/main.css
+++ b/www/assets/css/main.css
@@ -58,12 +58,14 @@ html, body {
 
 .view {
     position: absolute;
-
+    overflow-y: auto;
+    
     left: 0;
     top: 0;
     z-index: 400;
 
     width: 100%;
+    height: 100%;
 
     -o-transition: left 1s;
     -webkit-transform: left 1s;
@@ -72,7 +74,7 @@ html, body {
 
 .view .list {
     padding: 1.2em 0 1.5em;
-    margin: 2em;
+    margin: 0.3em 2em 2em 2em;
 
     text-align: center;
     font-size: 1.6em;
@@ -83,8 +85,6 @@ html, body {
 }
 
 .view .list li:hover {
-    cursor: pointer;
-    background-color: rgba(50,50,50, 0.4);
 }
 
 li[data-hoodie-action] {
@@ -306,10 +306,33 @@ nav.startscreen .item.swipe-right {
     text-align: center;
 }
 
+#people-view ul {
+    height: inherit;
+    position: relative;
+    padding-top: 100px;
+}
+
+#people-view ul li:first-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 98%;
+    border: none;
+}
+
+#people-view ul li:last-child {
+    border: none;
+}
+
 #people-view .person {
     text-decoration: line-through;
     color: grey;
     font-size: 1.6em;
+}
+
+#people-view .person:hover {
+    cursor: pointer;
+    background-color: rgba(50, 50, 50, 0.4);
 }
 
 #people-view .person.involved {
